test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_abstract_array_declarator_2.plx
pub fn main(none) i32 {
    # pointer declarator can't follow array size declarator
    return cast<*i32[3]>(0)
}
